--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,7 +1,7 @@
 server:
   port: 8189
   servlet:
-    context-path: /app
+    context-path: /market
 spring:
   datasource:
     driver-class-name: org.h2.Driver
