В проект добавлен функционал по безопасности с урока

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -19,4 +19,7 @@ spring:
       enabled: true
       settings:
         web-allow-others: false
+jwt:
+  secret: djfljadslfjlasdf
+  lifetime: 36000000
 
